--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@babel/preset-env": "^7.21.5",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.2",
-    "@webpack-cli/generators": "^3.0.2",
+    "@webpack-cli/generators": "^2.5.0",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
     "css-loader": "^6.7.3",
@@ -43,5 +43,6 @@
     "lint:fix": "npm run lint -- --fix",
     "format": "prettier ./src --write",
     "deploy": "gh-pages -d dist"
-  }
+  },
+  "author": ""
 }
